Fix CLI menu and operation trace algorithm
